--- a/myapp/templates/feature_details.html
+++ b/myapp/templates/feature_details.html
@@ -26,9 +26,9 @@
         }
         .subtitle {
             text-align: center;
-            font-style: italic;
+            font-style: italic, bold;
             margin-bottom: 20px;
-            color: #ff0000;
+            color: #c45757;
         }
         .navigation-btn {
             display: inline-block;
@@ -65,7 +65,7 @@
         
         <!-- Navigation buttons -->
         <a href="{% url 'wine_details' wine_name 0 %}" class="navigation-btn">Back to Wine Details</a>
-        <a href="{% url 'features' wine_name=wine_name feature_name=feature_name %}" class="navigation-btn">Explore Feature</a>
+        <a href="{% url 'features' wine_name=wine_name feature_name=feature_name feature_value=feature_value%}" class="navigation-btn">Explore Feature</a>
         
         <!-- Plotly graph -->
         <div id="plot">{{ plot_div|safe }}</div>
